# space-graph

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  test_space_graph.py
space_graph/: __init__.py  kernels.py  model.py  penalties.py  solver.py  state.py  utils.py  weights.py
tests/: test_backend.py  test_matmul_helpers.py  test_space.py  test_utils.py
