[build-system]
requires = ['setuptools>=61', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'space-graph'
version = '0.1.0'
description = 'Pure Python SPACE: sparse partial correlation estimation'
readme = 'README.md'
requires-python = '>=3.10'
license = { text = 'GPL-3.0-or-later' }
dependencies = [
    'numpy>=1.20',
]

[project.optional-dependencies]
dev = ['pytest>=7']
numba = ['numba>=0.57']

[tool.setuptools]
packages = ['space_graph']

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['.']
